--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,14 @@
 			<version>1.7.7</version>
 		</dependency>
 
+		<!-- Command line parsing -->
+		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<version>1.2</version>
+		</dependency>
+
+
 		<!-- All around usefulness -->
 		<dependency>
 			<groupId>com.google.guava</groupId>
